[package]
name = "able-spi-friend"
version = "0.1.0"
authors = ["Amer Safdari <amersafdari@gmail.com>"]
edition = "2018"

[lib]
test = false
bench = false

[dependencies]
nb = "1.0.0"
embedded-hal = "0.2.4"
ufmt-write = "0.1.0"

[dependencies.arraydeque]
version = "0.4.5"
default-features = false

[dependencies.feather_m0]
version = "0.7.0"
features = ["unproven"]
